Cyberduck
https://cyberduck.io/

6.8.3
- [Bugfix] Refinements to dark mode (macOS) (#10508, #10510)
- [Bugfix] Failure running script in Terminal. Not authorized to send Apple events to Terminal (macOS) (#10475)
- [Bugfix] Upload action not enabled when server is not returning permission mask (FTP) (#10506)

6.8.2
- [Bugfix] Failure transferring more than one file (FTP) (#10494)

6.8.1
- [Bugfix] Interoperability with OpenStack Swift (S3 middleware) (#10471)
- [Bugfix] Failure opening Terminal.app (#10475)
- [Bugfix] Crash when dragging multiple files (macOS) (#10479)
- [Bugfix] Add One Zone-Infrequent Access storage class (S3) (#10481)
- [Bugfix] Improvements to dark mode (macOS) (#10486)
- [Bugfix] Smart card insert prompt displayed when opening connection (Windows) (#8595)

6.8.0
- [Feature] Support dark mode (macOS Mojave) (#10348)
- [Bugfix] Display scaling is broken for some input components (Windows) (#10443)
- [Bugfix] Missing session token when making the AssumeRoleRequest to obtain the cross account credentials from STS (S3) (#10432)
- [Bugfix] Interoperability with AWS Snowball (S3) (#10458)
- [Bugfix] No modification date displayed (Rackspace Cloudfiles) (#10446)

6.7.1
- [Bugfix] Failure uploading to OneDrive Deutschland (OneDrive)
- [Bugfix] Updated localizations

6.7.0
- [Feature] Support display scaling (Windows) (#8961)
- [Feature] Improve user experience for versioned buckets, e.g. properly hide folders with a delete marker (S3) (#10357)
- [Feature] Transparently support role­based access, including cross­account using AWS Security Token Service (STS), configured in the standard AWS SDK credentials file (S3) (#8880)
- [Feature] Prompt for an MFA token during authentication when specified in the profile from the standard AWS SDK credentials file (S3)
- [Feature] Interoperability with Microsoft Office 365 Deutschland (OneDrive) (#10291)
- [Bugfix] Allow configuration of charset in bookmark (SFTP)
- [Bugfix] Incomplete transfers (#10347)