@@ -54,10 +54,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
-
-
-
     </style>
 </head>
 
@@ -89,6 +85,10 @@
     <li><span class="label label-warning">Bugfix</span> Upload action not enabled when server is not returning
         permission mask (FTP) (<a
             href="https://trac.cyberduck.io/ticket/10506">#10506</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Large uploads requiring checksum of parts fail with network
+        timeout (<a
+            href="https://trac.cyberduck.io/ticket/10516">#10516</a>)
     </li>
 </ul>
 
